templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helloworld
        sidecar.istio.io/inject: "true"
    spec:
      automountServiceAccountToken: true
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            ephemeral-storage: 256Mi
            memory: 256Mi
          requests:
            cpu: 500m
            ephemeral-storage: 256Mi
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
